Use Angular routing and nested routes in place of selection, inputs and outputs

--- a/good-dogs/ui/src/app/app.component.html
+++ b/good-dogs/ui/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="p-3">
-  <h1>They're All Good Dogs</h1>
-
-  <div class="d-flex">
-    <app-dog-list (selected)="this.onDogSelected($event)"></app-dog-list>
-    <app-dog-details class="ml-2" [selectedDogName]="this.selectedDogName"></app-dog-details>
-  </div>
-</div>
+<router-outlet></router-outlet>
