--- a/good-dogs/ui/src/app/dog-list/dog-list.component.html
+++ b/good-dogs/ui/src/app/dog-list/dog-list.component.html
@@ -4,8 +4,8 @@
             <th>Breed</th>
             <th>Group</th>
         </tr>
-        <tr *ngFor="let dog of allDogs; let i = index" (click)="clickRow(i)" 
-            [ngClass]="{'selected': selectedIdx == i}">
+        <tr *ngFor="let dog of allDogs; let i = index" [routerLink]="['/dogs', dog.name]" 
+            [ngClass]="{'selected': selectedBreed == dog.name}">
             <td>{{dog.name}}</td>
             <td>{{dog.group}}</td>
         </tr>
