Some styling improvments

--- a/good-dogs/ui/src/app/app.component.html
+++ b/good-dogs/ui/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div class="title px-5 py-2">They're All Good Dogs</div>
+<div class="app mt-5 p-3">
+  <router-outlet></router-outlet>
+</div>
