--- a/good-dogs/ui/src/app/dogs/dogs.component.html
+++ b/good-dogs/ui/src/app/dogs/dogs.component.html
@@ -1,9 +1,6 @@
-<div class="p-3">
-    <h1>They're All Good Dogs</h1>
-  
-    <div class="d-flex">
-      <app-dog-list></app-dog-list>
-      <app-dog-details class="ml-2"></app-dog-details>
-    </div>
-  </div>
+<div class="title">Select a Breed</div>
+<div class="d-flex mt-2">
+    <app-dog-list></app-dog-list>
+    <app-dog-details class="ml-2"></app-dog-details>
+</div>
   
